# GECCO-2018

./: .gitignore  README.md
Codes/FindOptimal/: CMakeLists.txt  clean.sh  main.c
Codes/FindOptimal/libGA/: Chromosome.c  GA.c  GA.h
Codes/FindOptimal/libGA/operators/: Mutation.h
Codes/GeneticAlgorithm/: CMakeLists.txt  Chromosome.h  GA.c  GA.h  clean.sh
Codes/GeneticAlgorithm/operators/: Crossover.c  Mutation.c  Replacement.c  Selection.c  Selection.h
Codes/MakeDataset/: CMakeLists.txt  NK.c  NK.h  OneMax.c  OneMax.h  clean.sh  main.c
Codes/MakeDataset/libGA/operators/: Crossover.c  Crossover.h  Mutation.c  Replacement.c  Replacement.h  Selection.c
LaTeX/: bibliography.bib  body.tex  figure1-a.eps  figure1-b.eps  figure2-color.html  figure2-greys.html  main.tex
